<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LineHaul Pro</string>
    <string name="hello_world">Hello world!</string>
    <string name="btn_change_pwd">Change Password</string>
    <string name="btn_driver_detail">Driver Detail</string>
    <string name="btn_multi_scan">Multi Scan</string>
    <string name="btn_check_out">Check Out</string>
    <string name="btn_cached_jobs">Cached Jobs</string>
    <string name="btn_scan_settings">Scan Settings</string>
    <string name="btn_scanning_help">Scanning Help</string>
    <string name="btn_switch_to_route_app">Switch To Route App</string>
    <string name="btn_group_photo">Group Photo</string>
    <string name="btn_preferences">Preferences</string>
    <string name="btn_exit">Exit</string>
    <string name="textview_driver_id">Driver Id:6217</string>
    <string name="textview_change_pwd">Change Password</string>
    <string name="textview_txt_title">Please enter your details</string>
    <string name="edittext_txt_hint">Driver ID</string>
    <string name="edittext_txt_hint_user">Username</string>
    <string name="edittext_txt_hint_pwd">Password</string>
    <string name="edittext_txt_autologin">Auto Login</string>
    <string name="edittext_txt_hint_rememberme">Remember Me</string>
    <string name="login_txt_btn">Login</string>

    <!-- string for dashboard -->
    <string name="textview_line_hauls">Line Hauls</string>
    <string name="textview_driver_detail">Driver Details</string>
    <string name="textview_multiscan">Multi Scan</string>
    <string name="textview_checkout">Check Out</string>
    <string name="textview_cachedjobs">Cached Jobs</string>
    <string name="textview_retransmit_cachedjobs">Transmit Jobs</string>
    <string name="textview_delete_cachedjobs">Delete Jobs</string>
    <string name="textview_scansettings">Scan Settings</string>
    <string name="textview_scanninghelp">Scanning Help</string>
    <string name="textview_switchtorouteapp">Route App</string>
    <string name="textview_groupphoto">Group Photo</string>
    <string name="textview_preferences">Preferences</string>
    <string name="textview_exit">Logout</string>
    <string name="textview_reference">Extra Comments</string>
    <string name="textview_scan_setting">Scan Setting</string>
    <string name="textview_search">Search</string>
    
    <!-- string for checkout -->
    <string name="reference">Reference</string>
    <string name="reference_no">Reference No:</string>
    <string name="reference_comment">Comment:</string>
    <string name="reference_company_id">CompanyID:</string>
    
    <!-- string for checkout -->
    <string name="checkout_textview_title">Check Out Scroll To bottom  </string>
    <string name="checkout_textview_name">Vehicle Name </string>
    <string name="checkout_textview_miles">End Miles    </string>
    <string name="checkout_textview_btn">Save Details</string>
    <!-- string for multi_scan_inner -->
    <string name="textview_multi_scan_inner_signature"> Signature Name </string>
    <string name="textview_multi_scan_inner_companyid">Company ID </string>
    <string name="textview_multi_scan_inner_chg2">Chg 2</string>
    <string name="textview_multi_scan_inner_redelivery">Re Delivery</string>
    <string name="textview_multi_scan_inner_chg1">Chg 1</string>
    <string name="textview_multi_scan_inner_cartoon1">Carton 1</string>
    <string name="textview_multi_scan_inner_to"> To</string>
    <string name="textview_multi_scan_inner_from">From</string>
    <!-- string for multiscan -->
    <string name="checkin_textview_title">Check In Scroll to bottom  </string>
    <string name="multiscan_targascan_title">LineHaul Pro</string>
    <string name="multiscan_targascan_errormsg_alldetail">Required fields can not be empty</string>
    <string name="multiscan_targascan_errormsg_signaturename">Please enter signature name </string>
    <string name="multiscan_targascan_errormsg_cartoon1">Please enter carton1</string>
    <string name="multiscan_targascan_errormsg_to">Please enter to</string>
    <string name="multiscan_targascan_errormsg_from">Please enter from</string>
    <string name="multiscan_targascan_errormsg_sign">Please add your signature</string>
    <string name="multiscan_targascan_errormsg_document">Please scan a document in order to submit this order.</string>
    <string name="Only_Ycol">This feature is not available for CTS.</string>
    <!-- string for Login -->
    <string name="login_driverid">Please enter driver id</string>
    <string name="login_edtusername">Please enter user name</string>
    <string name="login_password">Please enter user name</string>
    <string name="login_curpassword">Please enter current password</string>
    <string name="login_newpassword">Please Enter New Password</string>
    <string name="login_newcfpassword">Please enter new confirm password</string>
    <string name="donotmatch_pwd">New password and confirm password must be equal</string>
    <string name="login_final">Entered successfully</string>
    <string name="not_match">Chg1 and Chg2 must be different.</string>


    <string name="checkMasterPassword_textview_btn">Submit</string>
    <string-array name="country_arrays">
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>

    <string name="error_server">Server error please try again later.</string>
    <string name="error_internet">Please check your internet connection.</string>
    <string name="offline_login">Internet connection is not available. Do you want to continue with offline mode?</string>
    <string name="validate_startmile">Please enter start mile</string>
    <string name="validate_endmile">Please enter end mile</string>
    <string name="validate_vehiclename">Please enter vahicle name</string>
    <string name="validate_required_field">Required fields can not be empty</string>
    <string name="offline_checkout">Internet connection is not available.You can not check out in offline mode.</string>
    <string name="force_login">You are not logged in! Please login and try again</string>
    <string name="update_txt_btn">Update</string>
    <string name="title_activity_cached_job">CachedJobActivity</string>

    <!-- string for cachedjob -->
    <string name="cachedjob_textview_text">Number of cached job : %s</string>
    <string name="cachedjob_btn_text_retransmit">Retransmit</string>
    <string name="cachedjob_btn_text_deleteall">Delete All</string>
    <string name="msg_cach_job_insert">Data added into cache memory</string>
    <string name="msg_delete_cachedjojb">Are you sure want to delete all cached job?</string>
    <string name="msg_retransmit_cachedjojb">Are you sure want to transmit all cached job?</string>
    <string name="cach_job_confirm">You are not logged in. Do you want to save this detail as cached data?</string>
    <string name="cach_job_login_error">You are not logged Please login and try again</string>
    <string name="please_provide_signature">Please provide signature</string>
    <string name="title_activity_check_out_detail">CheckOutDetailActivity</string>
    <string name="scroll_bottom">Scroll to bottom</string>
    <string name="msg_logout">Are you sure you want to logout?</string>
    <string name="driver_detail">Driver Detail</string>
    <string name="address_detail">Address List</string>    
    
    <string name="header_sub_text_1">LineHaul</string>
    <string name="header_sub_text_2">PRO</string>
    
    <string name="select_url">Select Url</string>

</resources>